--- a/Rock.Migrations/Migrations/RockMigrationSQL.resx
+++ b/Rock.Migrations/Migrations/RockMigrationSQL.resx
@@ -346,4 +346,28 @@
   <data name="_202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements_spFinance_PledgeAnalyticsQueryWithMultipleAccountIds" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Version 16.0\Version 1.16.7\202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements_spFinance_PledgeAnalyticsQueryWithMultipleAccountIds.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="_202411062044462_AddDefaultNextGenCheckInLabels_ChildLabelPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Version 16.0\Version 1.16.7\202411062044462_AddDefaultNextGenCheckInLabels_ChildLabel.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_202411062044462_AddDefaultNextGenCheckInLabels_ChildLabelJson" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Version 16.0\Version 1.16.7\202411062044462_AddDefaultNextGenCheckInLabels_ChildLabel.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="_202411062044462_AddDefaultNextGenCheckInLabels_NoteLabelPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Version 16.0\Version 1.16.7\202411062044462_AddDefaultNextGenCheckInLabels_NoteLabel.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_202411062044462_AddDefaultNextGenCheckInLabels_NoteLabelJson" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Version 16.0\Version 1.16.7\202411062044462_AddDefaultNextGenCheckInLabels_NoteLabel.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="_202411062044462_AddDefaultNextGenCheckInLabels_ParentLabelPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Version 16.0\Version 1.16.7\202411062044462_AddDefaultNextGenCheckInLabels_ParentLabel.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_202411062044462_AddDefaultNextGenCheckInLabels_ParentLabelJson" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Version 16.0\Version 1.16.7\202411062044462_AddDefaultNextGenCheckInLabels_ParentLabel.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="_202411062044462_AddDefaultNextGenCheckInLabels_NameTagPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Version 16.0\Version 1.16.7\202411062044462_AddDefaultNextGenCheckInLabels_NameTag.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_202411062044462_AddDefaultNextGenCheckInLabels_NameTagJson" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Version 16.0\Version 1.16.7\202411062044462_AddDefaultNextGenCheckInLabels_NameTag.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
