--- a/Rock/Plugin/HotFixes/HotFixMigrationResource.resx
+++ b/Rock/Plugin/HotFixes/HotFixMigrationResource.resx
@@ -232,4 +232,7 @@
   <data name="_177_AddAdultAttendanceTypeAttributeToFamilyAttendanceBadge" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>177_AddAdultAttendanceTypeAttributeToFamilyAttendanceBadge.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="_216_open_bible_on_notebook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>216_open_bible_on_notebook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
