- Updated default learning hub image

--- a/Rock.Migrations/Migrations/RockMigrationSQL.resx
+++ b/Rock.Migrations/Migrations/RockMigrationSQL.resx
@@ -370,4 +370,7 @@
   <data name="_202411062044462_AddDefaultNextGenCheckInLabels_NameTagJson" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Version 16.0\Version 1.16.7\202411062044462_AddDefaultNextGenCheckInLabels_NameTag.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="lms_header_min" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lms_header_min.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
