--- a/Rock.Migrations/Migrations/RockMigrationSQL.resx
+++ b/Rock.Migrations/Migrations/RockMigrationSQL.resx
@@ -376,4 +376,7 @@
   <data name="_202501152224140_ImprovePeerNetworkRelationshipTrends_spPeerNetwork_UpdateFollowing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>202501152224140_ImprovePeerNetworkRelationshipTrends_spPeerNetwork_UpdateFollowing.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="_202503011520245_AddNewCommunicationPreviewPageAndPersonalizationSegments_spCommunicationRecipientDetails" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>202503011520245_AddNewCommunicationPreviewPageAndPersonalizationSegments_spCommunicationRecipientDetails.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
