--- a/Rock.Migrations/Migrations/RockMigrationSQL.resx
+++ b/Rock.Migrations/Migrations/RockMigrationSQL.resx
@@ -382,4 +382,7 @@
   <data name="_202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP_spCommunicationRecipientDetails" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Version 17.0\Version 17.0\202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP_spCommunicationRecipientDetails.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="_202504281829314_UpdateWorkflowEntryFormSharingAndFormBuilderSupport_GenerateWorkflowTypeSlugs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>202504281829314_UpdateWorkflowEntryFormSharingAndFormBuilderSupport_GenerateWorkflowTypeSlugs.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
