--- a/Rock/Plugin/HotFixes/HotFixMigrationResource.resx
+++ b/Rock/Plugin/HotFixes/HotFixMigrationResource.resx
@@ -244,4 +244,7 @@
   <data name="_225_ImprovePeerNetworkCalculations_spPeerNetwork_UpdateGroupConnections" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>225_ImprovePeerNetworkCalculations_spPeerNetwork_UpdateGroupConnections.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="_250_AddDuplicateCommunicationRecipientHandling_spCommunicationRecipientDetails" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>250_AddDuplicateCommunicationRecipientHandling_spCommunicationRecipientDetails.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
