--- a/Rock.Migrations/Migrations/RockMigrationSQL.resx
+++ b/Rock.Migrations/Migrations/RockMigrationSQL.resx
@@ -388,4 +388,10 @@
   <data name="_202506042042400_AddCommunicationSaturationReport_spCommunication_SaturationReport" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>202506042042400_AddCommunicationSaturationReport_spCommunication_SaturationReport.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="_202506232302341_AddAndSwapToObsidianGroupPlacementBlock_spGetDestinationGroups" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>202506232302341_AddAndSwapToObsidianGroupPlacementBlock_spGetDestinationGroups.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="_202506232302341_AddAndSwapToObsidianGroupPlacementBlock_spGetGroupPlacementPeople" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>202506232302341_AddAndSwapToObsidianGroupPlacementBlock_spGetGroupPlacementPeople.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
